# c-programs

./: 42.c  47.c  60.c  CMakeLists.txt  EPQ-56.c  EPQ-85.c  EPQ-86.c  EPQ-94.c  EPQ-95.c  EPQ-96.c  P-03.c  P-04.c  P-05.c  P-06.c  P-07.c  P-08.c  P-09.c  P-10.c  P-11.c  P-12.c  P-13.c  P-14.c  P-15.c  P-16.c  P-23.c  P-74.c  P-87.c  hello.h  iris.c  otp.c  sample.txt
