cmake_minimum_required(VERSION 3.26)
project(c_programs C)

set(CMAKE_C_STANDARD 11)

add_executable(c_programs
    42.c
        60.c
        47.c
        hello.c
        main.c
        P-57.c
        P-56.c
        P-55.c
        P-54.c
        P-53.c
        P-52.c
        P-51.c
        P-50.c
        P-49.c
        P-48.c
        P-47.c
        P-46.c
        P-45.c
        P-44.c
        P-43.c
        P-42.c
        P-41.c
        P-40.c
        P-39.c
        P-38.c
        P-37.c
        P-36.c
        P-35.c
        P-34.c
        P-33.c
        P-32.c
        P-31.c
        P-30.c
        P-29.c
        P-28.c
        P-27.c
        P-26.c
        P-25.c
        P-24.c
        P-23.c
        P-22.c
        P-21.c
        P-20.c
        P-19.c
        P-18.c
        P-17.c
        P-16.c
        P-15.c
        P-14.c
        P-13.c
        P-12.c
        P-11.c
        P-10.c
        P-09.c
        P-08.c
        P-07.c
        P-06.c
        P-05.c
        P-04.c
        P-03.c
        P-02.c
        P-01.c
        P-85.c
        P-86.c
        P-87.c
        P-70.c
        P-74.c
        P-58.c
        P-59.c
        P-60.c
        P-61.c
        P-62.c
        P-63.c
        P-64.c
        P-65.c
        P-66.c
        P-71.c
        P-72.c
        P-73.c
        P-75.c
        P-76.c
        P-77.c
        P-78.c
        P-79.c
        P-80.c
        P-81.c
        P-82.c
        P-83.c
        P-84.c
        P-88.c
        P-89.c
        P-90.c
        P-91.c
        P-92.c
        P-93.c
        P-94.c
        EPQ-86.c
        EPQ-85.c
        EPQ-95.c
        EPQ-96.c
        EPQ-94.c
        EPQ-56.c
        prac-1.c
        prac-2.c
        prac-3.c
        iris.c
)